# cpp-game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  readme.md  run.sh  todo
assets/: imagesmap.json
demo/: containers.json  enemies.json  items.json
demo/index/scripts/: filthy_man_talk.script  load.script
src/: main.cpp  util.cpp  util.hpp
src/game/: core.cpp  core.hpp  gameInfo.hpp  mapData.hpp  types.cpp  types.hpp  util.hpp
src/game/entities/: entity.hpp
src/game/items/: container.cpp  container.hpp  item.cpp  item.hpp  manager.hpp
src/game/map/: map.cpp  map.hpp  room.cpp  room.hpp  tile.cpp  tile.hpp
src/game/player/: inventory.cpp  inventory.hpp  pclass.cpp  pclass.hpp  player.cpp  player.hpp
src/game/scripting/: command.cpp  command.hpp  object.cpp  object.hpp  overseer.cpp  overseer.hpp  script.cpp  script.hpp
src/game/spells/: builder.hpp  incantation.cpp  incantation.hpp  intensity.hpp  spell.hpp  target.hpp  type.hpp
src/terminal/: color.hpp  wrapper.hpp
src/window/: assets.hpp  command_line.hpp  container.hpp  context.hpp  customContexts.hpp  font.hpp  inventory.hpp  mainPanel.hpp  main_panel.cpp  main_panel.hpp  util.cpp  util.hpp  window.cpp  window.hpp  wrapper.cpp  wrapper.hpp
src/window/inventory/: description.hpp  inventory.cpp  inventory.hpp  menus.cpp  menus.hpp
tools/game-creator/: ItemEditor.py  gamesdk.py
tools/image-converter/: main.py
tools/message-box-merger/: do.command  main.py
tools/tileset-splitter/: main.py
